--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>wSpend</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="icon" href="res/icons/logo.png">
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/master.css">
+    <link rel="icon" href="Front_End/res/icons/logo.png">
+    <link rel="stylesheet" href="Front_End/styles/index.css">
+    <link rel="stylesheet" href="Front_End/styles/master.css">
 </head>
 <body>
 
@@ -48,7 +48,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="res/photos/index/budgeting.jpeg">
+                <img src="Front_End/res/photos/index/budgeting.jpeg">
                 <div class="carousel-caption d-md-block">
                     <h4>Technology at its work</h4>
                     <p class="font-wight-bold">Let technology aid you in managing your personal finances so you have
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="res/photos/index/ion.jpeg">
+                <img src="Front_End/res/photos/index/ion.jpeg">
                 <div class="carousel-caption d-md-block">
                     <h4>Meet I.O.N.</h4>
                     <p class="font-wight-bold">Our powerful assistant ready to give you the best tips in managing your
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="res/photos/index/hasslefree.jpeg">
+                <img src="Front_End/res/photos/index/hasslefree.jpeg">
                 <div class="carousel-caption d-md-block">
                     <h4>Don't stress</h4>
                     <p class="font-weight-bold">Never again worry about not having enough money to make your dreams come
