--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
     </div>
 </main>
 
+<script>
+    $(function() {
+        $("#carouselBanner").swipe({
+            swipeRight: function() {
+                $(this).carousel('prev')
+            },
+            swipeLeft: function() {
+                $(this).carousel('next')
+            }
+        });
+    })
+</script>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
