--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </div>
 </main>
 
+<script src="Front_End/js/jquery.mobile.custom.js"></script>
 <script>
     $(function() {
         $("#carouselBanner").swipe({
