--- a/index.html
+++ b/index.html
@@ -75,7 +75,16 @@
     </div>
 </main>
 
-<script src="Front_End/js/jquery.mobile.custom.js"></script>
+<script>
+   $(document).ready(function() {  
+  		 $(".carousel-inner").swiperight(function() {  
+    		  $(this).parent().carousel('prev');  
+	    		});  
+		   $(".carousel-inner").swipeleft(function() {  
+		      $(this).parent().carousel('next');  
+	   });  
+	});  
+</script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
