--- a/index.html
+++ b/index.html
@@ -76,16 +76,14 @@
 </main>
 
 <script>
-    $(function() {
-        $("#carouselBanner").swipe({
-            swipeRight: function() {
-                $(this).carousel('prev')
-            },
-            swipeLeft: function() {
-                $(this).carousel('next')
-            }
-        });
-    })
+   $(document).ready(function() {  
+  		 $(".carousel-inner").swiperight(function() {  
+    		  $(this).parent().carousel('prev');  
+	    		});  
+		   $(".carousel-inner").swipeleft(function() {  
+		      $(this).parent().carousel('next');  
+	   });  
+	});  
 </script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
