Added controls to carousel
It does not always auto-start.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 </div>
             </div>
         </div>
+        <a href="#carouselBanner" class="carousel-control-prev" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </a>
+        <a href="#carouselBanner" class="carousel-control-next" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </a>
     </div>
 </main>
 
