--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     </div>
 </main>
 
+<script src="Front_End/js/jquery.mobile.custom.min.js"></script>
 <script>
    $(document).ready(function() {  
   		 $(".carousel-inner").swiperight(function() {  
