--- a/index.html
+++ b/index.html
@@ -1,106 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>wSpend</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <link rel="icon" href="Front_End/res/icons/logo.png">
     <link rel="stylesheet" href="Front_End/styles/index.css">
     <link rel="stylesheet" href="Front_End/styles/master.css">
 </head>
+
 <body>
 
-<header>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="index.html">wSpend</a>
-        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#content"
-                aria-controls="content">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <header>
+        <!--This is the navbar on the top of the screen-->
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="index.html">wSpend</a>
+            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#content" aria-controls="content">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="content">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="content">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <!--This is the carousel section which provides the user with a nice intro about our webapp.-->
+        <div id="carouselBanner" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselBanner" class="active" data-slide-to="0"></li>
+                <li data-target="#carouselBanner" class="" data-slide-to="1"></li>
+                <li data-target="#carouselBanner" class="" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Front_End/res/photos/index/budgeting.jpeg">
+                    <div class="carousel-caption d-md-block">
+                        <h4>Technology at its work</h4>
+                        <p class="font-wight-bold">Let technology aid you in managing your personal finances so you have time for what really matters
+                            to you</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Front_End/res/photos/index/ion.jpeg">
+                    <div class="carousel-caption d-md-block">
+                        <h4>Meet I.O.N.</h4>
+                        <p class="font-wight-bold">Our powerful assistant ready to give you the best tips in managing your money.
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Front_End/res/photos/index/hasslefree.jpeg">
+                    <div class="carousel-caption d-md-block">
+                        <h4>Don't stress</h4>
+                        <p class="font-weight-bold">Never again worry about not having enough money to make your dreams come true.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <a href="#carouselBanner" class="carousel-control-prev" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a href="#carouselBanner" class="carousel-control-next" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
         </div>
-    </nav>
-</header>
+    </main>
 
-<main>
-    <div id="carouselBanner" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselBanner" class="active" data-slide-to="0"></li>
-            <li data-target="#carouselBanner" class="" data-slide-to="1"></li>
-            <li data-target="#carouselBanner" class="" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="Front_End/res/photos/index/budgeting.jpeg">
-                <div class="carousel-caption d-md-block">
-                    <h4>Technology at its work</h4>
-                    <p class="font-wight-bold">Let technology aid you in managing your personal finances so you have
-                        time for what really matters to you</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="Front_End/res/photos/index/ion.jpeg">
-                <div class="carousel-caption d-md-block">
-                    <h4>Meet I.O.N.</h4>
-                    <p class="font-wight-bold">Our powerful assistant ready to give you the best tips in managing your
-                        money.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="Front_End/res/photos/index/hasslefree.jpeg">
-                <div class="carousel-caption d-md-block">
-                    <h4>Don't stress</h4>
-                    <p class="font-weight-bold">Never again worry about not having enough money to make your dreams come
-                        true.</p>
-                </div>
-            </div>
-        </div>
-        <a href="#carouselBanner" class="carousel-control-prev" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </a>
-        <a href="#carouselBanner" class="carousel-control-next" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </a>
-    </div>
-</main>
+    <!--Scripts part-->
+    <script src="Front_End/js/jquery.mobile.custom.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".carousel-inner").swiperight(function () {
+                $(this).parent().carousel('prev');
+            });
+            $(".carousel-inner").swipeleft(function () {
+                $(this).parent().carousel('next');
+            });
+        });  
+    </script>
 
-<script src="Front_End/js/jquery.mobile.custom.min.js"></script>
-<script>
-   $(document).ready(function() {  
-  		 $(".carousel-inner").swiperight(function() {  
-    		  $(this).parent().carousel('prev');  
-	    		});  
-		   $(".carousel-inner").swipeleft(function() {  
-		      $(this).parent().carousel('next');  
-	   });  
-	});  
-</script>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
