--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </div>
         </nav>
 
+        <!--Modals launched from the login/signup links in the navbar are placed here.-->
         <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -124,7 +125,7 @@
                     <img src="Front_End/res/photos/index/budgeting.jpeg">
                     <div class="carousel-caption d-md-block">
                         <h4>Technology at its work</h4>
-                        <p class="font-wight-bold">Let technology aid you in managing your personal finances so you have time for what really matters
+                        <p class="font-weight-bold">Let technology aid you in managing your personal finances so you have time for what really matters
                             to you</p>
                     </div>
                 </div>
@@ -132,7 +133,7 @@
                     <img src="Front_End/res/photos/index/ion.jpeg">
                     <div class="carousel-caption d-md-block">
                         <h4>Meet I.O.N.</h4>
-                        <p class="font-wight-bold">Our powerful assistant ready to give you the best tips in managing your money.
+                        <p class="font-weight-bold">Our powerful assistant ready to give you the best tips in managing your money.
                         </p>
                     </div>
                 </div>
