--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                                 <input type="email" class="form-control" placeholder="Email" required>
                             </div>
                             <div class="row sign-row2 ml-auto mr-auto">
-                                    <input type="password" class="form-control" placeholder="Password" required>
-                                </div>
+                                <input type="password" class="form-control" placeholder="Password" required>
+                            </div>
                         </form>
                     </div>
                     <div class="modal-footer">
@@ -156,54 +156,49 @@
 
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/dummy.jpeg">
+                <img class="card-img-top" src="Front_End/res/photos/index/glance.jpg">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content
-                        is a little bit longer.</p>
-                    <p class="card-text">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </p>
+                    <h5 class="card-title">At a glance statistics</h5>
+                    <p class="card-text">We provide you with all the data you need at a glance so you can check your current status faster and takecare of what really matters to you.</p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/dummy.jpeg">
+                <img class="card-img-top" src="Front_End/res/photos/index/family.jpeg">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content
-                        is a little bit longer.</p>
+                    <h5 class="card-title">More time & money</h5>
+                    <p class="card-text">We know that money is a very powerful force nowadays, but there are things in life not even money can buy. We make sure you have the money! You make sure to live your life at the fullest!</p>
                     <p class="card-text">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <small class="text-muted">with our new smart tips on how to save money</small>
                     </p>
                 </div>
             </div>
         </div>
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/dummy.jpeg">
+                <img class="card-img-top" src="Front_End/res/photos/index/boss.jpeg">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content
-                        is a little bit longer.</p>
+                    <h5 class="card-title">We work for you</h5>
+                    <p class="card-text">Think of us like your personal financial advisor. You are the real boss!</p>
                     <p class="card-text">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <small class="text-muted">Sign up and let the power of wSpend tackle down your financial problems</small>
                     </p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/dummy.jpeg">
+                <img class="card-img-top" src="Front_End/res/photos/index/bank.jpg">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content
-                        is a little bit longer.</p>
+                    <h5 class="card-title">Bank integration</h5>
+                    <p class="card-text">Would you like to never track a single spending again, but you still want our smart tips and statistics?
+                        Let your bank do the work for you.
+                    </p>
                     <p class="card-text">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <small class="text-muted">Comming soon</small>
                     </p>
                 </div>
             </div>
         </div>
     </main>
-          
+
     <!--Scripts part-->
     <script src="Front_End/js/jquery.mobile.custom.min.js"></script>
     <script>
