--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
                     <li class="nav-item" id="login-item">
                         <a href="#" class="nav-link" id="login" data-toggle="modal" data-target="#loginModal">LogIn</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="separator">||</a>
-                    </li>
                     <li class="nav-item" id="signup-item">
                         <a href="#" class="nav-link" id="signup" data-toggle="modal" data-target="#signupModal">SignUp</a>
                     </li>
@@ -125,7 +122,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Front_End/res/photos/index/budgeting.jpeg">
+                    <img src="Front_End/res/photos/index/budgeting.jpg">
                     <div class="carousel-caption d-md-block">
                         <h4>Technology at its work</h4>
                         <p class="font-weight-bold">Let technology aid you in managing your personal finances so you have time for what really matters
@@ -133,7 +130,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="Front_End/res/photos/index/ion.jpeg">
+                    <img src="Front_End/res/photos/index/ion.jpg">
                     <div class="carousel-caption d-md-block">
                         <h4>Meet I.O.N.</h4>
                         <p class="font-weight-bold">Our powerful assistant ready to give you the best tips in managing your money.
@@ -141,7 +138,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="Front_End/res/photos/index/hasslefree.jpeg">
+                    <img src="Front_End/res/photos/index/hasslefree.jpg">
                     <div class="carousel-caption d-md-block">
                         <h4>Don't stress</h4>
                         <p class="font-weight-bold">Never again worry about not having enough money to make your dreams come true.
@@ -167,7 +164,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/family.jpeg">
+                <img class="card-img-top" src="Front_End/res/photos/index/family.jpg">
                 <div class="card-body">
                     <h5 class="card-title">More time & money</h5>
                     <p class="card-text">We know that money is a very powerful force nowadays, but there are things in life not even money can
@@ -180,7 +177,7 @@
         </div>
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/boss.jpeg">
+                <img class="card-img-top" src="Front_End/res/photos/index/boss.jpg">
                 <div class="card-body">
                     <h5 class="card-title">We work for you</h5>
                     <p class="card-text">Think of us like your personal financial advisor. You are the real boss!</p>
@@ -207,15 +204,16 @@
     <!--Scripts part-->
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
 
-    <script>
+    <!--<script>
         (function () {
             ('#logForm').on('submit', function (e) {
                 e.preventDefault();
@@ -224,7 +222,7 @@
                 );
             });
         });
-    </script>
+    </script>-->
 
 </body>
 
