Added team logo on page

--- a/Front_End/sources/team.html
+++ b/Front_End/sources/team.html
@@ -146,8 +146,8 @@
     </header>
 
     <main>
-        <div class="w-100">
-            <img src="../res/icons/teamLogo.png" class=" animated fadeInDownBig mr-auto ml-auto">
+        <div class="banner">
+            <img src="../res/icons/teamLogo.png">
         </div>
     </main>
 
