--- a/Front_End/sources/team.html
+++ b/Front_End/sources/team.html
@@ -149,6 +149,44 @@
         <div class="banner">
             <img src="../res/icons/teamLogo.png">
         </div>
+        <section class="present">
+            <div class="grid">
+                <div class="row ml-auto mr-auto">
+                    <div class="col">
+                        <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
+                        <h3 class="text-center">Giosanu Andrei</h3>
+                        <p class="text-center">Something about me here!</p>
+                        <ul>
+                            <li>Accomplishments</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
+                        <h3 class="text-center">Ivlel Luiza</h3>
+                        <p class="text-center">Something about me here!</p>
+                        <ul>
+                            <li>Accomplishments</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
+                        <h3 class="text-center">Misaila Alina</h3>
+                        <p class="text-center">Something about me here!</p>
+                        <ul>
+                            <li>Accomplishments</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
+                        <h3 class="text-center">Balan Alexandru</h3>
+                        <p class="text-center">Something about me here!</p>
+                        <ul>
+                            <li>Accomplishments</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
