Team page and Pricing
The team page is done, it just needs al the resources to be provided by the team members themselves. 

Pricing page is in work, just added a couple of things.

--- a/Front_End/sources/team.html
+++ b/Front_End/sources/team.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -153,9 +153,10 @@
             <div class="grid">
                 <div class="row ml-auto mr-auto">
                     <div class="col">
-                        <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
+                        <img src="../res/photos/team/giovanni.png" class="rounded-circle" alt="">
                         <h3 class="text-center">Giosanu Andrei</h3>
                         <p class="text-center">Something about me here!</p>
+                        <h5>Things about him:</h5>
                         <ul>
                             <li>Accomplishments</li>
                         </ul>
@@ -164,6 +165,7 @@
                         <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
                         <h3 class="text-center">Ivlel Luiza</h3>
                         <p class="text-center">Something about me here!</p>
+                        <h5>Things about her:</h5>
                         <ul>
                             <li>Accomplishments</li>
                         </ul>
@@ -172,16 +174,21 @@
                         <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
                         <h3 class="text-center">Misaila Alina</h3>
                         <p class="text-center">Something about me here!</p>
+                        <h5>Things about her:</h5>
                         <ul>
                             <li>Accomplishments</li>
                         </ul>
                     </div>
                     <div class="col">
-                        <img src="../res/photos/team/dummy.jpeg" class="rounded-circle" alt="">
+                        <img src="../res/photos/team/alex.jpg" class="rounded-circle" alt="">
                         <h3 class="text-center">Balan Alexandru</h3>
-                        <p class="text-center">Something about me here!</p>
+                        <p class="text-center">I am a passionate developer and a hard-worker.
+                            <br>I like to develop software that trully benefits people and makes the world a better place.</p>
+                        <h5 class="text-center">Things about him:</h5>
                         <ul>
-                            <li>Accomplishments</li>
+                            <li>Has a lovely wife</li>
+                            <li>Knows to program</li>
+                            <li>Team leader</li>
                         </ul>
                     </div>
                 </div>
