--- a/Front_End/sources/pricing.html
+++ b/Front_End/sources/pricing.html
@@ -3,37 +3,40 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>wSpend</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
-    <link rel="icon" href="Front_End/res/icons/logo.png">
-    <link rel="stylesheet" href="Front_End/styles/master.css">
-    <link rel="stylesheet" href="Front_End/styles/index.css">
+    <link rel="icon" href="../res/icons/logo.png">
+    <link rel="stylesheet" href="../styles/master.css">
+    <link rel="stylesheet" href="../styles/pricing.css">
+    <link rel="stylesheet" href="../styles//animate.css">
 </head>
 
 <body>
-
     <header>
         <!--This is the navbar on the top of the screen-->
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">wSpend</a>
+            <a class="navbar-brand" href="../../index.html">wSpend</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#content" aria-controls="content">
-                <span><i class="fas fa-bars"></i></span>
+                <span>
+                    <i class="fas fa-bars"></i>
+                </span>
             </button>
 
             <div class="collapse navbar-collapse" id="content">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Front_End/sources/team.html">Team</a>
+                        <a class="nav-link" href="team.html">Team</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Front_End/sources/pricing.html">Pricing</a>
+                        <a class="nav-link" href="#">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -143,117 +146,33 @@
     </header>
 
     <main>
-        <!--This is the carousel section which provides the user with a nice intro about our webapp.-->
-        <div id="carouselBanner" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselBanner" class="active" data-slide-to="0"></li>
-                <li data-target="#carouselBanner" class="" data-slide-to="1"></li>
-                <li data-target="#carouselBanner" class="" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="Front_End/res/photos/index/budgeting.jpg">
-                    <div class="carousel-caption d-md-block">
-                        <h4>Technology at its work</h4>
-                        <p class="font-weight-bold">Let technology aid you in managing your personal finances so you have time for what really matters
-                            to you</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Front_End/res/photos/index/ion.jpg">
-                    <div class="carousel-caption d-md-block">
-                        <h4>Meet I.O.N.</h4>
-                        <p class="font-weight-bold">Our powerful assistant ready to give you the best tips in managing your money.
-                        </p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Front_End/res/photos/index/hasslefree.jpg">
-                    <div class="carousel-caption d-md-block">
-                        <h4>Don't stress</h4>
-                        <p class="font-weight-bold">Never again worry about not having enough money to make your dreams come true.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <a href="#carouselBanner" class="carousel-control-prev" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </a>
-            <a href="#carouselBanner" class="carousel-control-next" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </a>
-        </div>
+        <h1 class="title text-center animated fadeInDownBig">Start your journey!</h1>
+        <h2 class="subtitle text-center animated fadeInDownBig">Do more awesome things with the power of wSpend</h2>
 
-        <div class="card-deck">
-            <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/glance.jpg">
-                <div class="card-body">
-                    <h5 class="card-title">At a glance statistics</h5>
-                    <p class="card-text">We provide you with all the data you need at a glance so you can check your current status faster and
-                        takecare of what really matters to you.</p>
-                </div>
+        <div class="row mr-auto ml-auto">
+            <div class="col">
+                <h2>Starter Plan</h2>
             </div>
-            <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/family.jpg">
-                <div class="card-body">
-                    <h5 class="card-title">More time & money</h5>
-                    <p class="card-text">We know that money is a very powerful force nowadays, but there are things in life not even money can
-                        buy. We make sure you have the money! You make sure to live your life at the fullest!</p>
-                    <p class="card-text">
-                        <small class="text-muted">with our new smart tips on how to save money</small>
-                    </p>
-                </div>
+            <div class="col">
+                <h2>wSpend Family</h2>
             </div>
-        </div>
-        <div class="card-deck">
-            <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/boss.jpg">
-                <div class="card-body">
-                    <h5 class="card-title">We work for you</h5>
-                    <p class="card-text">Think of us like your personal financial advisor. You are the real boss!</p>
-                    <p class="card-text">
-                        <small class="text-muted">Sign up and let the power of wSpend tackle down your financial problems</small>
-                    </p>
-                </div>
+            <div class="col">
+                <h2>wSpend Pro</h2>
             </div>
-            <div class="card">
-                <img class="card-img-top" src="Front_End/res/photos/index/bank.jpg">
-                <div class="card-body">
-                    <h5 class="card-title">Bank integration</h5>
-                    <p class="card-text">Would you like to never track a single spending again, but you still want our smart tips and statistics?
-                        Let your bank do the work for you.
-                    </p>
-                    <p class="card-text">
-                        <small class="text-muted">Comming soon</small>
-                    </p>
-                </div>
+            <div class="col">
+                <h2>wSpend Enterprise</h2>
             </div>
         </div>
     </main>
 
-    <!--Scripts part-->
 
-
-
+    <!--Bootstrap js-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-
-    <!--<script>
-        (function () {
-            ('#logForm').on('submit', function (e) {
-                e.preventDefault();
-                post('C:\Users\balan\Documents\GitHub\wSpend\post.txt',
-                    ('#logForm').serialize(),
-                );
-            });
-        });
-    </script>-->
-
 </body>
 
 </html>
