--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">wSpend</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#content" aria-controls="content">
-                <span><i class="fas fa-bars"></i></span>
+                <span>
+                    <i class="fas fa-bars"></i>
+                </span>
             </button>
 
             <div class="collapse navbar-collapse" id="content">
